<resources>
    <string name="app_name">DropboxClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_photo">title_activity_photo</string>
    <string name="home">Home</string>
    <string name="photos">Photos</string>
    <string name="files">Files</string>
    <string name="image">Images</string>
    <string name="account">Account</string>
    <string name="file_example1">Get Starred with Dropbox Paper.url</string>
    <string name="file_example2">Get Starred with Dropbox Paper.pdf</string>
    <string name="user_mail">tran-giang.son@usth.edu.vn</string>
    <string name="transfer_files">Transfer Files</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="create_or_upload">Create or Upload Files</string>
    <string name="create_folder">Create Folder</string>
    <string name="create">Create</string>
    <string name="space_used">Space Used</string>
    <string name="space">0,2% of 2GB</string>
    <string name="email">Email</string>
    <string name="detail">Detail</string>
    <string name="account_type">Dropbox Basic</string>
    <string name="avatar1">avatar1.png</string>
    <string name="avatar2">avatar2.png</string>
    <string name="avatar3">avatar3.png</string>
    <string name="avatar4">avatar4.png</string>
    <string name="avatar5">avatar5.png</string>
    <string name="avatar6">avatar6.png</string>
    <string name="avatar7">avatar7.png</string>
    <string name="avatar8">avatar8.png</string>
    <string name="avatar9">avatar9.png</string>
    <string name="avatar10">avatar10.png</string>
    <string name="dropbox">Dropbox</string>
    <string name="Get_to_your_file_offline">Get to your files offline</string>
    <string name="make_your_most_impostant_files_available_without_an_internet_connection">Make your most impostant files available without an internet connection</string>
    <string name="last_week">LAST WEEK</string>
    <string name="this_month">THIS MONTH</string>
    <string name="create_paper">Create paper</string>
    <string name="search_your_files">Search your files</string>
    <string name="take_photo">Take Photo</string>
    <string name="your_shared_folders_will_show_up_here_so_they_re_easy_to_find">Your shared folders will show up here so they\'re easy to find</string>
    <string name="where_work_comes_together">Where work comes together</string>
    <string name="aim_for_the_stars">Aim for the stars</string>
    <string name="after_you_star_an_item_it_ll_show_up_here_so_it_s_easier_to_get_to">After you star an item, it\'ll show up here, so it\'s easier to get to</string>
    <string name="paper">Paper</string>
    <string name="text_file">Text  File</string>
    <string name="upload_file">Upload File</string>
    <string name="app_key">f2zecxjgvokoldh</string>
    <string name="country">Country</string>
</resources>