<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_activity"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/files_activity"
        android:title="@string/files"
        android:icon="@drawable/ic_file"
        />
    <item
        android:id="@+id/create_button"
        android:title="@string/create"
        android:icon="@drawable/ic_add"
        />


    <item
        android:id="@+id/photo_activity"
        android:title="@string/photos"
        android:icon="@drawable/ic_photo"
        />
    <item
        android:id="@+id/account_activity"
        android:title="@string/account"
        android:icon="@drawable/account"
        />

</menu>