<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecentFragment"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/rectangle_1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:background="#232425"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LAST WEEK"
                    android:textSize="10sp"
                    android:paddingLeft="20dp"
                    android:textColor="#666768"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="normal|bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="56dp"
                        android:src="@drawable/folder"
                        android:padding="10dp"
                        android:layout_gravity="center"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <TextView
                            android:id="@+id/image_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Image"
                            android:textColor="@color/white"
                            android:gravity="top"
                            android:fontFamily="sans-serif-light"
                            android:textStyle="normal|bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_title"
                            android:text="@string/dropbox"
                            android:textColor="#606162"
                            android:fontFamily="sans-serif-light"
                            android:textStyle="normal|normal"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/rectangle_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:background="#232425"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="THIS MONTH"
                    android:textSize="10sp"
                    android:paddingLeft="20dp"
                    android:textColor="#666768"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="normal|bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="56dp"
                        android:src="@drawable/file1"
                        android:padding="10dp"
                        android:layout_gravity="center"/>
                    <LinearLayout
                        android:id="@+id/file1_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <TextView
                            android:id="@+id/image_title_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/file_example1"
                            android:textColor="@color/white"
                            android:gravity="top"
                            android:fontFamily="sans-serif-light"
                            android:textStyle="normal|bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_title"
                            android:text="@string/dropbox"
                            android:textColor="#606162"
                            android:fontFamily="sans-serif-light"
                            android:textStyle="normal|normal"/>
                    </LinearLayout>
                </LinearLayout>

                    <View
                        android:background="#666666"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="56dp"
                        android:src="@drawable/file1"
                        android:padding="10dp"
                        android:layout_gravity="center"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <TextView
                            android:id="@+id/image_title_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/file_example2"
                            android:textColor="@color/white"
                            android:gravity="top"
                            android:fontFamily="sans-serif-light"
                            android:textStyle="normal|bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_title"
                            android:text="@string/dropbox"
                            android:textColor="#606162"
                            android:fontFamily="sans-serif-light"
                            android:textStyle="normal|normal"/>
                    </LinearLayout>
                </LinearLayout>
                    <View
                        android:background="#666666"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>